kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disco
  labels:
    app: disco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disco
  template:
    metadata:
      labels:
        app: disco
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: disco-persistent-storage
          emptyDir: {}
      containers:
        - name: disco
          image: disco
          volumeMounts:
            - name: disco-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - disco.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 200Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 50m
        - name: disco-nginx
          image: nginx:alpine
          volumeMounts:
            - name: disco-persistent-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
