kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disco
spec:
  selector:
    app: disco
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: disco-nginx
spec:
  selector:
    app: disco
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
