kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: max-body-size
spec:
  buffering:
    maxRequestBodyBytes: 10485760  # 10m
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://disco.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disco
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: disco-max-body-size@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - disco.si
      secretName: disco-tls
  rules:
    - host: disco.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: disco
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disco-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: disco-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.disco.si
      secretName: disco-nginx-tls
  rules:
    - host: files.disco.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: disco-nginx
                port:
                  number: 80
